Unfinished work, forms validations are not yet active, need some work still to actually validate the input data

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,27 +29,27 @@
           <div class="row">
             <!-- Find -->
             <div class="col-6">
-              <button class="btn btn-warning" style="margin: 5px;">
+              <a href="/artists" class="btn btn-warning" style="margin: 5px;">
                 Find an artist
-              </button>
+              </a>
             </div>
             <div class="col-6">
-              <button class="btn btn-primary" style="margin: 5px;">
+              <a href="/venues" class="btn btn-primary" style="margin: 5px;">
                 Find a venue
-              </button>
+              </a>
             </div>
           </div>
           <div class="row">
             <!-- Post -->
             <div class="col-6">
-              <button class="btn btn-warning" style="margin: 5px;">
+              <a href="/artists/create" class="btn btn-warning" style="margin: 5px;">
                 Post an artist
-              </button>
+              </a>
             </div>
             <div class="col-6">
-              <button class="btn btn-primary" style="margin: 5px;">
+              <a href="/venues/create" class="btn btn-primary" style="margin: 5px;">
                 Post a venue
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -57,9 +57,9 @@
       </div>
       <div class="text-info" style="margin-top: 70px;">
         <h6>Publicize about your show for free</h6>
-        <button class="btn btn-info" style="margin: 5px;">
+        <a href="/shows/create" class="btn btn-info" style="margin: 5px;">
           Post a show
-        </button>
+        </a>
       </div>
     </div>
     <div class="col-6" style="padding-right: 5%;">
