--- a/templates/forms/create_artist.html
+++ b/templates/forms/create_artist.html
@@ -10,7 +10,15 @@
             CREATE A NEW ARTIST
         </h3>
       </div>
-      <form method="POST">
+      <form action="" method="POST" novalidate>
+        {{ form.hidden_tag() }}
+        {% for field in form.errors %}
+        {% for error in form.errors[field] %}
+            <div class="alert alert-error">
+                <strong>Error!</strong> {{error}}
+            </div>
+        {% endfor %}
+        {% endfor %}
         <div class="form-group">
             {{ form.name(class_ = 'form-control', placeholder="Name", autofocus = true) }}
         </div>
@@ -22,18 +30,27 @@
             {{ form.state(class_ = 'form-control', placeholder="State", autofocus = true) }}
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" style="text-align: left;">
             {{ form.phone(class_ = 'form-control', placeholder="Phone", autofocus = true) }}
         </div>
         <div class="form-group" style="text-align: left;">
           <small class="text-warning">Ctrl+Click to select multiple</small>
           {{ form.genres(class_ = 'form-control', placeholder="Genres, separated by commas", id=form.state, autofocus = true) }}
         </div>
-        <div class="form-group">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            {{ form.website(class_ = 'form-control', placeholder="website link", autofocus = true) }}
+          </div>
+          <div class="form-group col-md-6">
+            {{ form.image_link(class_ = 'form-control', placeholder="image link", autofocus = true) }}
+          </div>
+        </div>
+        <div class="form-group" style="text-align: left;">
             {{ form.facebook_link(class_ = 'form-control', placeholder="Facebook Link", autofocus = true) }}
         </div>
         <div class="form-group">
-            <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
+          {{ form.submit(class_ = 'btn btn-primary btn-lg btn-block', value="Create Artist") }}
+            <!-- <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block"> -->
         </div>
       </form>
     </div>
