--- a/templates/forms/create_venue.html
+++ b/templates/forms/create_venue.html
@@ -13,6 +13,14 @@
         </h3>
       </div>
       <form method="POST">
+        {{ form.hidden_tag() }}
+        {% for field in form.errors %}
+        {% for error in form.errors[field] %}
+            <div class="alert alert-error">
+                <strong>Error!</strong> {{error}}
+            </div>
+        {% endfor %}
+        {% endfor %}
         <div class="form-group">
           {{ form.name(class_='form-control', placeholder="Name", autofocus=true) }}
         </div>
