Add most of the forms pages integrated, remaining work is to clean things up and add optional fields

--- a/templates/artist.html
+++ b/templates/artist.html
@@ -57,7 +57,7 @@
           >
         </div>
         {% endif %}
-        {% if data.artist.seeking_venue_description != "None" %}
+        {% if data.artist.seeking_venue_description != "" %}
         <a
           href="#"
           class="text-danger"
