--- a/templates/venue.html
+++ b/templates/venue.html
@@ -57,7 +57,7 @@
             >
           </div>
           {% endif %}
-          {% if data.venue.seeking_talent_description != "None" %}
+          {% if data.venue.seeking_talent_description != "" %}
           <a
             href="#"
             class="text-danger"
