--- a/templates/forms/create_artist.html
+++ b/templates/forms/create_artist.html
@@ -1,5 +1,5 @@
 {% set navlinks = [ { 'name': 'Venues', 'class': '', 'link': '/venues'}, {
-'name': 'Artists', 'class': 'text-primary', 'link': '/artists'}, { 'name':
+'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name':
 'Shows', 'class': '', 'link': '/shows'} ] %} {% extends 'layouts/main.html' %}
 {% block title %}Create Artist{% endblock %} {% block content %}
 <div class="container">
@@ -10,15 +10,8 @@
             CREATE A NEW ARTIST
         </h3>
       </div>
-      <form action="" method="POST" novalidate>
+      <form action="" method="POST">
         {{ form.hidden_tag() }}
-        {% for field in form.errors %}
-        {% for error in form.errors[field] %}
-            <div class="alert alert-error">
-                <strong>Error!</strong> {{error}}
-            </div>
-        {% endfor %}
-        {% endfor %}
         <div class="form-group">
             {{ form.name(class_ = 'form-control', placeholder="Name", autofocus = true) }}
         </div>
@@ -49,8 +42,7 @@
             {{ form.facebook_link(class_ = 'form-control', placeholder="Facebook Link", autofocus = true) }}
         </div>
         <div class="form-group">
-          {{ form.submit(class_ = 'btn btn-primary btn-lg btn-block', value="Create Artist") }}
-            <!-- <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block"> -->
+            <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
         </div>
       </form>
     </div>
