--- a/templates/forms/create_venue.html
+++ b/templates/forms/create_venue.html
@@ -1,5 +1,5 @@
 {% set navlinks = [ { 'name': 'Venues', 'class': '', 'link': '/venues'}, {
-'name': 'Artists', 'class': 'text-primary', 'link': '/artists'}, { 'name':
+'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name':
 'Shows', 'class': '', 'link': '/shows'} ] %}
 {% extends 'layouts/main.html' %}
 {% block title %}Create Venue{% endblock %}
@@ -12,15 +12,8 @@
           CREATE A NEW VENUE
         </h3>
       </div>
-      <form method="POST">
+      <form action="" method="POST">
         {{ form.hidden_tag() }}
-        {% for field in form.errors %}
-        {% for error in form.errors[field] %}
-            <div class="alert alert-error">
-                <strong>Error!</strong> {{error}}
-            </div>
-        {% endfor %}
-        {% endfor %}
         <div class="form-group">
           {{ form.name(class_='form-control', placeholder="Name", autofocus=true) }}
         </div>
@@ -43,6 +36,12 @@
         <div class="form-group" style="text-align: left;">
           <small class="text-warning">Ctrl+Click to select multiple</small>
           {{ form.genres(class_ = 'form-control', placeholder="Genres, separated by commas", id=form.state, autofocus = true) }}
+        </div>
+        <div class="form-group">
+          {{ form.website(class_ = 'form-control', placeholder="website Link", autofocus = true) }}
+        </div>
+        <div class="form-group">
+          {{ form.image_link(class_ = 'form-control', placeholder="Image Link", autofocus = true) }}
         </div>
         <div class="form-group">
           {{ form.facebook_link(class_ = 'form-control', placeholder="Facebook Link", autofocus = true) }}
