--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -118,12 +118,11 @@
     {% if notifications|length > 0 %}
     <div class="position-absolute w-100 d-flex flex-column p-4">
       {% for notification in notifications %}
-      <div class="toast ml-auto" role="alert" data-delay="5000" data-autohide="true">
+      <div class="toast ml-auto" role="alert" data-delay="8000" data-autohide="true">
           <div class="toast-header">
-              <strong class="mr-auto text-primary">Toast</strong>
-              <small class="text-muted">3 mins ago</small>
+              <strong class="mr-auto text-primary">{{ notification.title }}</strong>
           </div>
-          <div class="toast-body"> {{ notification }} </div>
+          <div class="toast-body"> {{ notification.body }} </div>
       </div>
       {% endfor %}
     </div>
