--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name': 'Shows', 'class':
 '', 'link': '/shows'} ]%} {% extends 'layouts/main.html' %} {% block title
 %}Fyyur{% endblock %} {% block content %}
-<div style="padding-left: 1%; margin-top: 100px;">
+<div style="">
   <div class="row">
     <div class="col-6">
       <div>
@@ -25,7 +25,7 @@
         </h6>
       </div>
       <div class="row">
-        <div class="col-12">
+        <div class="col-10">
           <div class="row">
             <!-- Find -->
             <div class="col-6">
@@ -54,12 +54,6 @@
           </div>
         </div>
       </div>
-      <div class="text-info" style="margin-top: 70px;">
-        <h6>Publicize about your show for free</h6>
-        <a href="/shows/create" class="btn btn-info" style="margin: 5px;">
-          Post a show
-        </a>
-      </div>
     </div>
     <div class="col-6" style="padding-right: 5%;">
       <img
@@ -67,6 +61,16 @@
         class="img-fluid"
         alt="Responsive image"
       />
+      <div class="text-info col-12" style="margin-top: 70px;">
+        <div class="row">
+          <h6>Publicize about your show for free</h6>
+        </div>
+        <div class="row">
+          <a href="/shows/create" class="btn btn-info" style="margin: 5px;">
+            Post a show
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
