--- a/templates/forms/create_venue.html
+++ b/templates/forms/create_venue.html
@@ -15,36 +15,99 @@
       <form action="" method="POST">
         {{ form.hidden_tag() }}
         <div class="form-group">
+          {% if 'name' in form.errors %}
+          {{ form.name(class_='form-control is-invalid', placeholder="Name", autofocus=true) }}
+          <div class="invalid-feedback" style="text-align: left;">
+            {{ form.errors['name'][0] }}
+          </div>
+          {% else %}
           {{ form.name(class_='form-control', placeholder="Name", autofocus=true) }}
+          {% endif %}
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
-            {{ form.city(class_='form-control', placeholder="City", autofocus=true) }}
+            {% if 'city' in form.errors %}
+            {{ form.city(class_ = 'form-control is-invalid', placeholder="City", autofocus = true) }}
+            <div class="invalid-feedback" style="text-align: left;">
+              {{ form.errors['city'][0] }}
+            </div>
+            {% else %}
+            {{ form.city(class_ = 'form-control', placeholder="City", autofocus = true) }}
+            {% endif %}
           </div>
           <div class="form-group col-md-6">
-            {{ form.state(class_='form-control', placeholder="State", autofocus=true) }}
+            {% if 'state' in form.errors %}
+            {{ form.state(class_ = 'form-control is-invalid', placeholder="State", autofocus = true) }}
+            <div class="invalid-feedback" style="text-align: left;">
+              {{ form.errors['state'][0] }}
+            </div>
+            {% else %}
+            {{ form.state(class_ = 'form-control', placeholder="State", autofocus = true) }}
+            {% endif %}
           </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
-                {{ form.address(class_='form-control', placeholder="Address", autofocus=true) }}
+              {% if 'address' in form.errors %}
+              {{ form.address(class_='form-control is-invalid', placeholder="Address", autofocus=true) }}
+              <div class="invalid-feedback" style="text-align: left;">
+                {{ form.errors['address'][0] }}
+              </div>
+              {% else %}
+              {{ form.address(class_='form-control', placeholder="Address", autofocus=true) }}
+              {% endif %}
             </div>
             <div class="form-group col-md-6">
-                {{ form.phone(class_='form-control', placeholder="Phone", autofocus=true) }}
+              {% if 'phone' in form.errors %}
+              {{ form.phone(class_ = 'form-control is-invalid', placeholder="Phone", autofocus = true) }}
+              <div class="invalid-feedback" style="text-align: left;">
+                {{ form.errors['phone'][0] }}
+              </div>
+              {% else %}
+              {{ form.phone(class_ = 'form-control', placeholder="Phone", autofocus = true) }}
+              {%endif %}
             </div>
         </div>
         <div class="form-group" style="text-align: left;">
           <small class="text-warning">Ctrl+Click to select multiple</small>
+          {% if 'genres' in form.errors %}
+          {{ form.genres(class_ = 'form-control is-invalid', placeholder="Genres, separated by commas", id=form.state, autofocus = true) }}
+          <div class="invalid-feedback" style="text-align: left;">
+            {{ form.errors['genres'][0] }}
+          </div>
+          {% else %}
           {{ form.genres(class_ = 'form-control', placeholder="Genres, separated by commas", id=form.state, autofocus = true) }}
+          {% endif %}
         </div>
         <div class="form-group">
-          {{ form.website(class_ = 'form-control', placeholder="website Link", autofocus = true) }}
+          {% if 'website' in form.errors %}
+            {{ form.website(class_ = 'form-control is-invalid', placeholder="website link", autofocus = true) }}
+            <div class="invalid-feedback" style="text-align: left;">
+              {{ form.errors['website'][0] }}
+            </div>
+            {% else %}
+            {{ form.website(class_ = 'form-control', placeholder="website link", autofocus = true) }}
+            {% endif %}
         </div>
         <div class="form-group">
-          {{ form.image_link(class_ = 'form-control', placeholder="Image Link", autofocus = true) }}
+          {% if 'image_link' in form.errors %}
+            {{ form.image_link(class_ = 'form-control is-invalid', placeholder="image link", autofocus = true) }}
+            <div class="invalid-feedback" style="text-align: left;">
+              {{ form.errors['image_link'][0] }}
+            </div>
+            {% else %}
+            {{ form.image_link(class_ = 'form-control', placeholder="image link", autofocus = true) }}
+            {% endif %}
         </div>
         <div class="form-group">
-          {{ form.facebook_link(class_ = 'form-control', placeholder="Facebook Link", autofocus = true) }}
+          {% if 'facebook_link' in form.errors %}
+            {{ form.facebook_link(class_ = 'form-control is-invalid', placeholder="Facebook Link", autofocus = true) }}
+            <div class="invalid-feedback" style="text-align: left;">
+              {{ form.errors['facebook_link'][0] }}
+            </div>
+            {% else %}
+            {{ form.facebook_link(class_ = 'form-control', placeholder="Facebook Link", autofocus = true) }}
+            {% endif %}
         </div>
         <div class="form-group">
           <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block" />
