--- a/templates/forms/create_show.html
+++ b/templates/forms/create_show.html
@@ -16,22 +16,36 @@
         {{ form.hidden_tag() }}
         <div class="form-group" style="text-align: left;">
           <small class="text-warning">Artists IDs can be found in their profile pages</small>
+          {% if 'artist_id' in form.errors %}
+          {{ form.artist_id(class_='form-control is-invalid', placeholder="artist id", autofocus=true) }}
+          <div class="invalid-feedback" style="text-align: left;">
+            {{ form.errors['artist_id'][0] }}
+          </div>
+          {% else %}
           {{ form.artist_id(class_='form-control', placeholder="artist id", autofocus=true) }}
+          {% endif %}
         </div>
         <div class="form-group" style="text-align: left;">
           <small class="text-warning">Venues IDs can be found in their profile pages</small>
+          {% if 'venue_id' in form.errors %}
+          {{ form.venue_id(class_='form-control is-invalid', placeholder="venue id", autofocus=true) }}
+          <div class="invalid-feedback" style="text-align: left;">
+            {{ form.errors['venue_id'][0] }}
+          </div>
+          {% else %}
           {{ form.venue_id(class_='form-control', placeholder="venue id", autofocus=true) }}
+          {% endif %}
         </div>
         <div class="form-group" style="text-align: left;">
           <small class="text-warning">time format YYYY-MM-DD HH:MM:SS</small>
-          {% for field in form.errors %}
-          {% if field.name == start_time %}
-          {% for error in form.errors[field] %}
-          <br><small class="text-danger">{{error}}</small>
-          {% endfor %}
-          {% endif %}
-          {% endfor %}
+          {% if 'start_time' in form.errors %}
+          {{ form.start_time(class_='form-control is-invalid', placeholder="start time", autofocus=true) }}
+          <div class="invalid-feedback" style="text-align: left;">
+            {{ form.errors['start_time'][0] }}
+          </div>
+          {% else %}
           {{ form.start_time(class_='form-control', placeholder="start time", autofocus=true) }}
+          {% endif %}
         </div>
         <div class="form-group">
           <input type="submit" value="Create Show" class="btn btn-primary btn-lg btn-block" />
