--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -75,9 +75,9 @@
         bottom: 0;
         width: 100%;
         /* Set the fixed height of the footer here */
-        height: 60px;
-        line-height: 60px; /* Vertically center the text there */
-        background-color: white;
+        height: 40px;
+        line-height: 40px; /* Vertically center the text there */
+        background-color: whitesmoke;
       }
 
 
@@ -95,7 +95,7 @@
       }
 
       code {
-        font-size: 80%;
+        font-size: 50%;
       }
     </style>
     {% block links %}{% endblock %}
